# MotionNotifier

./: .gitignore  CMIntegrator.py  CMakeLists.txt  Messenger.py  README.md  build.sh  convertVideoCodec.cpp  exeCameraMonitor.py  install.sh  object.cpp  run.sh  scan.py  update.sh
include/: conn_handler.h  constants.h  logging.h  object.h
src/: api.py  camera.py  main.cc  main.py  object.cc
